format full time and date

--- a/views/index.erb
+++ b/views/index.erb
@@ -1,2 +1,2 @@
 <!-- index.erb -->
-Hello, the time is currently <%= Time.new.strftime("%H:%I on %m/%d/%y") %>
+Hello, the time is currently <%= Time.new.strftime("%l:%M %P on %A, %B %d, %Y") %>
