--- a/views/cute_pictures_of_animals.erb
+++ b/views/cute_pictures_of_animals.erb
@@ -5,7 +5,9 @@ Please consider this goat. <br><br>
 &nbsp;  ()  ()<br>
 &nbsp;  ()__()<br> -->
 
-<img src="https://i.chzbgr.com/maxW500/7132794880/h6DE8624C/" align="center" border=0 width=499
-height=316>
+<img src="https://i.chzbgr.com/maxW500/7132794880/h6DE8624C/" align="center" border=20 width=499
+height=316><br><br>
 
-http://hipposity.webs.com/mom%20%2B%20baby.jpg
+There are also these hippos to consider: <br><br>
+
+<img src="http://hipposity.webs.com/mom%20%2B%20baby.jpg" align = "center" border=20 width=449 height = 296>
