--- a/views/cute_pictures_of_animals.erb
+++ b/views/cute_pictures_of_animals.erb
@@ -5,9 +5,12 @@ Please consider this goat. <br><br>
 &nbsp;  ()  ()<br>
 &nbsp;  ()__()<br> -->
 
-<img src="https://i.chzbgr.com/maxW500/7132794880/h6DE8624C/" align="center" border=20 width=499
+<img src="https://i.chzbgr.com/maxW500/7132794880/h6DE8624C/" align="center" width=499
 height=316><br><br>
 
 There are also these hippos to consider: <br><br>
 
-<img src="http://hipposity.webs.com/mom%20%2B%20baby.jpg" align = "center" border=20 width=449 height = 296>
+<img src="http://hipposity.webs.com/mom%20%2B%20baby.jpg" align = "center" width=449 height = 296> <br><br>
+
+But this is the best thing:<br><br>
+<img src="http://i.imgur.com/XrvB3Yt.gif" align = "center" width = 250 min-height = 100>
