--- a/views/cute_pictures_of_animals.erb
+++ b/views/cute_pictures_of_animals.erb
@@ -1,9 +1,7 @@
-Please consider this goat. <br><br>
+<!DOCTYPE html>
+<html>
 
-<!-- &nbsp;&nbsp;^oo^<br>
-&nbsp; &nbsp; (..)<br>
-&nbsp;  ()  ()<br>
-&nbsp;  ()__()<br> -->
+Please consider this goat. <br><br>
 
 <img src="https://i.chzbgr.com/maxW500/7132794880/h6DE8624C/" align="center" width=499
 height=316><br><br>
@@ -14,3 +12,5 @@ There are also these hippos to consider: <br><br>
 
 But this is the best thing:<br><br>
 <img src="http://i.imgur.com/XrvB3Yt.gif" align = "center" width = 250 min-height = 100>
+
+</html>
