--- a/views/index.erb
+++ b/views/index.erb
@@ -7,29 +7,11 @@
 </head>
 
 <body>
-  <div class='container'> 
-    <div class='header'> 
-      <h1> Hsing-Hui Hsu </h1>
+
+  <div class="subheader">
       <h2> crosser of bridges</h2>
       <h2> carrier of umbrellas</h2>
       <h2> traipser of paths</h2>
-
-    </div> 
-
-    <div><ul class='navigation'>
-      <li><a href= "/home"> Home</a></li>
-      <li><a href= "/about"> About</a></li>
-      <li><a href= "/portfolio"> Portfolio</a></li>
-      <li><a href= "/contact"> Contact</a></li>
-      <li><a href= "/cute_pictures_of_animals">Fluffy things</a></li>
-  </ul></div>
-  </div>
+  </div> 
 </body>
 </html>
-
-<!-- 
-<% t = Time.new.gmtime %>
-Hello, the time in London is currently <%= t.strftime("%l:%M %P on %A, %B %d, %Y") %><br><br>
-
-The time in Seattle is currently <%= t.getlocal("-08:00").strftime("%l:%M %P on %A, %B %d, %Y")%>
- -->
