--- a/views/portfolio.erb
+++ b/views/portfolio.erb
@@ -7,8 +7,10 @@
 </head>
 
 <body>
-  <h1> The Utopia Within</h1>
-  <h2> Snapshots of Life in Beijing, as experienced by Cave Monsters</h2>
+  <div class="utopiaheader">
+  <h1 class="utopiatitle"> The Utopia Within</h1>
+  <h2 class= "utopiacaption"> Snapshots of Life in Beijing, as experienced by Cave Monsters</h2>
+  </div>
   <div class="container">
     <div class="gallery">
       <img class="utopia" id="balloons" src= "/images/balloons.jpeg">
