modified nav bar and pages

--- a/views/about.erb
+++ b/views/about.erb
@@ -1,38 +1,23 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <link href="/css/about.css" media= "all" rel="stylesheet">
+  <link href="/css/main.css" media= "all" rel="stylesheet">
   <title>Hsing-Hui Hsu</title>
 </head>
 
-<body>
-  <!-- <div id='header'> 
-    <h1> Hsing-Hui Hsu </h1>
-  </div> 
-
-  <div><ul class='navigation'>
-    <li><a href= "/home"> Home</a></li>
-    <li><a href= "/about"> About</a></li>
-    <li><a href= "/portfolio"> Portfolio</a></li>
-    <li><a href= "/contact"> Contact</a></li>
-    <li><a href= "/cute_pictures_of_animals">Fluffy things</a></li>
-  </ul></div> -->
-
-  <!-- can also do class='header'. If there are lots of classes, all are listed within the quotes separated by spaces. Can have any number of class, but only one id -->
+<body class="about">
   
-  <div class='container'>
-    <div class= 'box'>    
+  <div class='about_container'>
+    <div class= 'bio_box'>    
       <img class='profile' src="/images/rainbowumbrella.jpg" >
     </div>
-    <div class= 'box'> 
+    <div class= 'bio_box'> 
       <h2>something about me</h2>
-      Kitty ipsum dolor sit amet, puking tail flick chase the red dot sleep in the sink, hairball stuck in a tree knock over the lamp chuf bat meow attack litter box. Hiss biting bat purr scratched toss the mousie, meow litter box zzz sleep in the sink. Hairball sniff leap sleep in the sink knock over the lamp, leap chuf biting puking scratched hiss. Give me fish run give me fish stuck in a tree knock over the lamp attack, claw I don't like that food shed everywhere run. Tail flick run puking stuck in a tree kittens feed me, attack your ankles give me fish jump lick jump. Puking I don't like that food stretching bat, lick lick meow puking climb the curtains chuf toss the mousie I don't like that food. Catnip I don't like that food puking sleep on your face, kittens bat stretching toss the mousie attack your ankles bat climb the curtains. Leap feed me purr attack your ankles climb the curtains, sunbathe eat zzz tail flick shed everywhere stuck in a tree. 
-    </div>
+      <div class ="bio"> 
+        Kitty ipsum dolor sit amet, puking tail flick chase the red dot sleep in the sink, hairball stuck in a tree knock over the lamp chuf bat meow attack litter box. Hiss biting bat purr scratched toss the mousie, meow litter box zzz sleep in the sink. Hairball sniff leap sleep in the sink knock over the lamp, leap chuf biting puking scratched hiss. Give me fish run give me fish stuck in a tree knock over the lamp attack, claw I don't like that food shed everywhere run. Tail flick run puking stuck in a tree kittens feed me, attack your ankles give me fish jump lick jump. Puking I don't like that food stretching bat, lick lick meow puking climb the curtains chuf toss the mousie I don't like that food. Catnip I don't like that food puking sleep on your face, kittens bat stretching toss the mousie attack your ankles bat climb the curtains. Leap feed me purr attack your ankles climb the curtains, sunbathe eat zzz tail flick shed everywhere stuck in a tree. 
+      </div>
     
   </div> <!-- end container -->
-  <br>
-  <a href="/"> Back to home</a>
-  
 </body>
 
 </html>
