--- a/views/layout.erb
+++ b/views/layout.erb
@@ -15,9 +15,15 @@
       <div><ul class='navigation'>
         <li><a href= "/home"> Home</a></li>
         <li><a href= "/about"> About</a></li>
-        <li><a href= "/portfolio"> Portfolio</a></li>
-        <li><a href= "/contact"> Contact</a></li>
+        <li><a href= "/portfolio"> Portfolio</a>
+          <ul class="portfolio_menu">
+            <li> The Utopia Within</li>
+            <li> Dinosaurs</li>
+            <li> Oh the places I'll go</li>
+          </ul>
+        </li>
         <li><a href= "/cute_pictures_of_animals">Fluffy things</a></li>
+        <li><a href = "/blog">Blog</a></li>
       </ul></div>
     
     </div>
