--- a/views/portfolio.erb
+++ b/views/portfolio.erb
@@ -35,10 +35,10 @@
     </div>
   </div>
   <br>
-  <div class ="footer">
+ <!--  <div class ="footer">
     <hr>
     <a href="/"> Back to home</a>
-  </div>
+  </div> -->
 </body>
 
 </html>
