--- a/public/css/main.css
+++ b/public/css/main.css
@@ -5,7 +5,7 @@ body {
   }
 
 .header {
-  position: absolute;
+  position: fixed;
   top:80px;
   right: 300px;
   font-variant: small-caps;
@@ -23,39 +23,108 @@ body {
   top: 200px;
   }
 
-
-ul {
-  list-style-type:none;
-  margin:0;
-  padding:0;
+/*start about styling*/
+.about {
+  border: 0px;
+  background: url(/images/rainbow.jpeg);
+  background-size: cover; 
+  background-position: center right;
   }
 
-li {
-  display:inline-block;
+.about_container {
+  width: 1100px;
+  margin: 10px 50px;
+  }
+
+.bio_box {
+  width: 530px;
+  height: 450px;
+  overflow: scroll;
+  margin-top: 20px;
+  display: inline-block;
+  background-color: transparent;
   padding-left: 10px;
-  font-variant: small-caps;
   }
+
+.profile {
+  border: 2px solid black;
+  padding: 2px;
+  min-height: 300px;
+  min-width: 300px;
+  }
+
+/*end about styling*/
+
+/*navigation bar styling*/
 
 a:link {
   color: white;
   }
 
-a:visited {
-  color: 
-  }
+/*a:visited {
+  color: blue;
+  }*/
 
 .navigation {
-  color: white;
+  display: block;
+  list-style-type:none;
   font-weight: 300;
   background-color: transparent;
   width:900px;
   padding:4px;
-  text-align: left;
-  display: inline-block;
   margin: 50px;
   position: relative;
+  font-variant: small-caps;
   }
 
-  .posts {
-    display: block;
+.navigation li {
+  display: inline-block;
+  padding: 5px;
+  color: white;
   }
+
+/*Dropdown menu*/
+
+.portfolio_menu {
+  display: none;
+  position: fixed;
+  list-style-type: none;
+  /*margin-left: 0px;*/
+  }
+
+.navigation li:hover {
+  background-color: #585858;
+  }
+
+.navigation li:hover ul {
+  display: block;
+  margin-left: 0px;
+  }
+
+.portfolio_menu li {
+  display: block;
+  padding-left: 5px;
+  margin-left: 0px;
+  }
+
+/*end dropdown*/
+
+/*blog styling*/
+.posts {
+  display: block;
+  margin-left: 50px;
+  }
+
+.blog_heading{
+  font-variant: small-caps;
+  margin-left: 50px;
+  font-size: 20px;
+  }
+
+/*contact styling*/
+.contact_block {
+  font-variant: small-caps;
+  text-align: right;
+  margin-right: 300px;
+  }
+
