--- a/views/layout.erb
+++ b/views/layout.erb
@@ -18,7 +18,7 @@
         <li><a href= "/portfolio"> Portfolio</a>
           <ul class="portfolio_menu">
             <li> The Utopia Within</li>
-            <li> Dinosaurs</li>
+            <li> <a href="/portfolio/dinosaurs">Dinosaurs</a></li>
             <li> Oh the places I'll go</li>
           </ul>
         </li>
