--- a/views/portfolio.erb
+++ b/views/portfolio.erb
@@ -6,7 +6,7 @@
   <title>Portfolio</title>
 </head>
 
-<body>
+<body class="portfolio_body">
   <div class="utopiaheader">
   <h1 class="utopiatitle"> The Utopia Within</h1>
   <h2 class= "utopiacaption"> Snapshots of Life in Beijing, as experienced by Cave Monsters</h2>
