--- a/views/dinosaurs.erb
+++ b/views/dinosaurs.erb
@@ -11,6 +11,9 @@
   <div>
     <img src="/images/picassosaur1.jpeg">
   </div>
+  <div>
+    <img src="/images/nurse.jpg">
+  </div>
 </div>
 
 </body>
