formatted blog post list

--- a/views/posts/day_1.erb
+++ b/views/posts/day_1.erb
@@ -1,5 +1,5 @@
 date: 2013-11-05
-title: "Week 2"
+title: "In which H goes to Seattle.rb"
 
 <div class="post">
 <h1>In which H goes to Seattle.rb</h1>
