--- a/public/css/main.css
+++ b/public/css/main.css
@@ -112,9 +112,13 @@ a:link {
 .posts {
   display: block;
   margin-left: 50px;
+  padding: 10px;
 }
 
 .blog_heading{
+  color: white;
+  background: linear-gradient(to right, black, white);
+  padding: 5px;
   font-variant: small-caps;
   margin-left: 50px;
   font-size: 20px;
