--- a/views/blog.erb
+++ b/views/blog.erb
@@ -2,8 +2,9 @@
 
   <div class="posts">
     
-    <% @sorted_posts.each do |post, date_array|%>
-      <a href="/blog/<%= post%>"> <%= post %></a>
+    <% @sorted_posts.each do |post, array|%>
+      <%= array["date"].strftime("%B %d, %Y:") %>
+      <a href="/blog/<%= post%>"> <%= array["title"] %></a>
       <br>
     <% end %>
     
