--- a/views/dinosaurs.erb
+++ b/views/dinosaurs.erb
@@ -7,12 +7,18 @@
 </head>
 <body>
 
-<div class="dinosaurs">
+<div class="container">
   <div>
     <img src="/images/picassosaur1.jpeg">
   </div>
   <div>
     <img src="/images/nurse.jpg">
+  </div>
+  <div>
+    <img src="/images/biteykind.jpeg">
+  </div>
+  <div>
+    <img src="/images/newfriend.jpeg">
   </div>
 </div>
 
