--- a/views/layout.erb
+++ b/views/layout.erb
@@ -15,9 +15,9 @@
       <div><ul class='navigation'>
         <li><a href= "/home"> Home</a></li>
         <li><a href= "/about"> About</a></li>
-        <li><a href= "/portfolio"> Portfolio</a>
+        <li>Portfolio
           <ul class="portfolio_menu">
-            <li> The Utopia Within</li>
+            <li> <a href= "/portfolio">The Utopia Within</a></li>
             <li> <a href="/portfolio/dinosaurs">Dinosaurs</a></li>
             <li> Oh the places I'll go</li>
           </ul>
