--- a/views/dinosaurs.erb
+++ b/views/dinosaurs.erb
@@ -8,17 +8,23 @@
 <body>
 
 <div class="container">
-  <div>
+  <div class="dinosaurs">
     <img src="/images/picassosaur1.jpeg">
   </div>
-  <div>
+  <div class="dinosaurs">
     <img src="/images/nurse.jpg">
   </div>
-  <div>
+  <div class="dinosaurs">
     <img src="/images/biteykind.jpeg">
   </div>
-  <div>
+  <div class="dinosaurs">
     <img src="/images/newfriend.jpeg">
+  </div>
+  <div class="dinosaurs">
+    <img src="/images/checkmate.jpg">
+  </div>
+  <div class="dinosaurs">
+    <img src="/images/picassosaur2.jpg">
   </div>
 </div>
 
