--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,5 +1,4 @@
 body {
-  border: 0px;
   background: url(/images/whiteumbrella.jpg);
   background-size: cover; 
 }
@@ -100,7 +99,78 @@ a:link {
   margin-left: 0px;
 }
 
+/*utopia styling*/
+.portfolio_body {
+  background: url(/images/steps.jpg);
+  background-size: cover;
+  background-position: center center;
+  }
+
+.utopiatitle {
+  color: white;
+  font-variant: small-caps;
+  background-color: black;
+  text-align: center;
+  }
+
+.utopiacaption {
+  color: black;
+  font-variant: small-caps;
+  font-size: 20px;
+  text-align: center;
+  }
+
+.gallery {
+  background-color: #6E6E6E;
+  margin:5px;
+  padding:5px;
+  border:1px solid white;
+  height:280px;
+  width:210px;
+  float:left;
+  text-align:center;
+  }
+
+.utopia {
+  vertical-align: middle;
+  display:inline;
+  margin:5px;
+  border:1px solid white;
+  opacity: 0.7;
+  }
+
+.utopia:hover {
+  border:1px solid blue;
+  opacity: 1;
+  }
+
+.caption {
+  color: white;
+  vertical-align: bottom;
+  text-align:center;
+  font-variant: small-caps;
+  width:200px;
+  margin:5px;
+  }
+
+/*dinosaurs styling*/
+
+.dinosaurs {
+  display: inline-block;
+  margin: 10px;
+}
+
+.dinosaurs:hover {
+  border: 1px solid blue;
+}
+
 /*blog styling*/
+
+.blog_body {
+  background: url(/images/balloon.jpg);
+  background-size: cover;
+}
+
 .posts {
   display: block;
   margin: 10px 80px;
