--- a/views/blog.erb
+++ b/views/blog.erb
@@ -1,11 +1,13 @@
-<div class= "blog_heading"> Musings</div>
+<body class= "blog_body">
+  <div class= "blog_heading"> Musings</div>
 
   <div class="posts">
-    
     <% @sorted_posts.each do |post, array|%>
       <%= array["date"].strftime("%B %d, %Y:") %>
       <a href="/blog/<%= post%>"> <%= array["title"] %></a>
       <br>
     <% end %>
     
-</div>
+  </div>
+
+</body>
