--- a/views/dinosaurs.erb
+++ b/views/dinosaurs.erb
@@ -1,21 +1,21 @@
 
 <div class="container">
   <div class="dinosaurs">
-    <img src="/images/picassosaur1.jpeg">
+    <img src="/img/picassosaur1.jpeg">
   </div>
   <div class="dinosaurs">
-    <img src="/images/nurse.jpg">
+    <img src="/img/nurse.jpg">
   </div>
   <div class="dinosaurs">
-    <img src="/images/biteykind.jpeg">
+    <img src="/img/biteykind.jpeg">
   </div>
   <div class="dinosaurs">
-    <img src="/images/newfriend.jpeg">
+    <img src="/img/newfriend.jpeg">
   </div>
   <div class="dinosaurs">
-    <img src="/images/checkmate.jpg">
+    <img src="/img/checkmate.jpg">
   </div>
   <div class="dinosaurs">
-    <img src="/images/picassosaur2.jpg">
+    <img src="/img/picassosaur2.jpg">
   </div>
 </div>
