--- a/views/portfolio.erb
+++ b/views/portfolio.erb
@@ -1,29 +1,29 @@
 
-<body class="portfolio_body">
+<body class= "portfolio_body">
   <div class="utopiaheader">
   <h1 class="utopiatitle"> The Utopia Within</h1>
   <h2 class= "utopiacaption"> Snapshots of Life in Beijing, as experienced by Cave Monsters</h2>
   </div>
   <div class="container">
     <div class="gallery">
-      <img class="utopia" id="balloons" src= "/images/balloons.jpeg">
-      <div class="caption">In which Epithemeus has a birthday </div>
+      <img class="utopia" id="balloons" src= "/img/balloons.jpeg">
+      <a href="/img/balloons_lb.jpeg" data-lightbox="utopians">In which Epithemeus has a birthday </a>
     </div>
 
     <div class="gallery">
-      <img class="utopia" id="dragonboat" src= "/images/dragonboat.jpeg">
-      <div class="caption">In which the Dragon Boat is Raced</div>
+      <img class="utopia" id="dragonboat" src= "/img/dragonboat.jpeg">
+      <a href="/img/dragonboat_lb.jpeg" data-lightbox="utopians">In which the Dragon Boat is Raced</a>
     </div>
     <div class="gallery">
-      <img class="utopia" id="pipa" src= "/images/pipa.jpeg">
-      <div class="caption">In which Barnabus plays the Pipa</div>
+      <img class="utopia" id="pipa" src= "/img/pipa.jpeg">
+      <a href="/img/pipa_lb.jpeg" data-lightbox="utopians">In which Barnabus plays the Pipa</a>
     </div>
     <div class="gallery">
-      <img class="utopia" id="chuar" src= "/images/chuar.jpeg">
-      <div class="caption">In which Larry Grills Chuan'r</div>
+      <img class="utopia" id="chuar" src= "/img/chuar.jpeg">
+      <a href="/img/chuar_lb.jpeg" data-lightbox="utopians">In which Larry Grills Chuan'r</a>
     </div>
     <div class="gallery">
-      <img class="utopia" id="diabolo" src= "/images/diabolo.jpeg">
-      <div class="caption">In which Herodotus plays the Diabolo</div>
+      <img class="utopia" id="diabolo" src= "/img/diabolo.jpeg">
+      <a href="/img/diabolo_lb.jpeg" data-lightbox="utopians">In which Herodotus plays the Diabolo</a>
     </div>
   </div>
