--- a/views/layout.erb
+++ b/views/layout.erb
@@ -1,6 +1,9 @@
 <html>
   <head>
     <link href="/css/main.css" media= "all" rel="stylesheet">
+    <script src="js/jquery-1.10.2.min.js"></script>
+    <script src="js/lightbox-2.6.min.js"></script>
+    <link href="css/lightbox.css" rel="stylesheet" />
     <title>Hsing-Hui Hsu</title>
   </head>
   <body>
