--- a/public/css/main.css
+++ b/public/css/main.css
@@ -174,7 +174,7 @@ a:link {
 /*blog styling*/
 
 .blog_body {
-  background: url(/images/balloon.jpg);
+  background: url(/img/balloon.jpg);
   background-size: cover;
 }
 
