--- a/public/css/main.css
+++ b/public/css/main.css
@@ -71,6 +71,7 @@ a:link {
 }
 
 .navigation li {
+  font-size: 20px;
   display: inline-block;
   padding: 5px;
   color: white;
@@ -190,12 +191,15 @@ a:link {
 }
 
 .post_date {
+  font-size: 20px;
   font-variant: small-caps;
+  color: white;
 }
 
 .posts h1 {
   font-variant: small-caps;
   font-size: 25px;
+  font-weight: 300;
 }
 
 .posts h2 {
