about image to img

--- a/views/about.erb
+++ b/views/about.erb
@@ -2,7 +2,7 @@
   
   <div class='about_container'>
     <div class= 'bio_box'>    
-      <img class='profile' src="/images/rainbowumbrella.jpg" >
+      <img class='profile' src="/img/rainbowumbrella.jpg" >
     </div>
     <div class= 'bio_box'> 
       <h2>something about me</h2>
