eliminate redundant body class tags

--- a/views/layout.erb
+++ b/views/layout.erb
@@ -6,7 +6,7 @@
     <link href="css/lightbox.css" rel="stylesheet" />
     <title>Hsing-Hui Hsu</title>
   </head>
-  <body>
+  <body class=" <%=@body_class%>">
 
     <div class='container'> 
 
