cleanup, rename dir

--- a/views/portfolio.erb
+++ b/views/portfolio.erb
@@ -6,7 +6,7 @@
   <div class="container">
     <div class="gallery">
       <img class="utopia" id="balloons" src= "/img/balloons.jpeg">
-      <a href="/img/balloons_lb.jpeg" data-lightbox="utopians">In which Epithemeus has a birthday </a>
+      <a href="/img/balloons_lb.jpeg" data-lightbox="utopians">In which Epimetheus has a birthday </a>
     </div>
 
     <div class="gallery">
