--- a/views/about.erb
+++ b/views/about.erb
@@ -1,11 +1,12 @@
   <div class='about_container'>
     <div class= 'bio_box'>    
-      <img class='profile' src="/img/rainbowumbrella.jpg" >
+      <img id='profile' src="/img/rainbowumbrella.jpg" >
     </div>
     <div class= 'bio_box'> 
-      <h2>something about me</h2>
-      <div class ="bio"> 
-        Kitty ipsum dolor sit amet, puking tail flick chase the red dot sleep in the sink, hairball stuck in a tree knock over the lamp chuf bat meow attack litter box. Hiss biting bat purr scratched toss the mousie, meow litter box zzz sleep in the sink. Hairball sniff leap sleep in the sink knock over the lamp, leap chuf biting puking scratched hiss. Give me fish run give me fish stuck in a tree knock over the lamp attack, claw I don't like that food shed everywhere run. Tail flick run puking stuck in a tree kittens feed me, attack your ankles give me fish jump lick jump. Puking I don't like that food stretching bat, lick lick meow puking climb the curtains chuf toss the mousie I don't like that food. Catnip I don't like that food puking sleep on your face, kittens bat stretching toss the mousie attack your ankles bat climb the curtains. Leap feed me purr attack your ankles climb the curtains, sunbathe eat zzz tail flick shed everywhere stuck in a tree. 
-      </div>
+      <h2>brought to you by the letter H</h2>
+      <p> 
+        Kitty ipsum dolor sit amet, puking tail flick chase the red dot sleep in the sink, hairball stuck in a tree knock over the lamp chuf bat meow attack litter box. Hiss biting bat purr scratched toss the mousie, meow litter box zzz sleep in the sink. Hairball sniff leap sleep in the sink knock over the lamp, leap chuf biting puking scratched hiss. Give me fish run give me fish stuck in a tree knock over the lamp attack, claw I don't like that food shed everywhere run. Tail flick run puking stuck in a tree kittens feed me, attack your ankles give me fish jump lick jump. Puking I don't like that food stretching bat, lick lick meow puking climb the curtains chuf toss the mousie I don't like that food. Catnip I don't like that food puking sleep on your face, kittens bat stretching toss the mousie attack your ankles bat climb the curtains. Leap feed me purr attack your ankles climb the curtains, sunbathe eat zzz tail flick shed everywhere stuck in a tree.
+      </p> 
+    </div>
     
   </div> <!-- end container -->
