--- a/views/blog.erb
+++ b/views/blog.erb
@@ -1,5 +1,4 @@
- <div class= "blog_heading"> Musings</div>
-
+ <!-- <div class= "blog_heading"> Musings</div> -->
   <div class="posts">
     <% @sorted_posts.each do |post, array|%>
       <span class="post_date"><%= array["date"].strftime("%B %d, %Y:") %><span>
