--- a/views/layout.erb
+++ b/views/layout.erb
@@ -6,7 +6,7 @@
     <link href="css/lightbox.css" rel="stylesheet" />
     <title>Hsing-Hui Hsu</title>
   </head>
-  <body class=" <%=@body_class%>">
+  <body class= "<%=@body_class%>">
 
     <div class='container'> 
 
@@ -23,7 +23,7 @@
             <li> <a href="/portfolio/dinosaurs">Dinosaurs</a></li>
           </ul>
         </li>
-        <li><a href = "/blog">Blog</a></li>
+        <li><a href = "/blog">Musings</a></li>
       </ul></div>
     
     </div>
