--- a/views/posts/seattle_rb.erb
+++ b/views/posts/seattle_rb.erb
@@ -1,7 +1,7 @@
 date: 2013-11-05
 title: "In which H encounters Rubyists in the Wild"
 
-<div class="post">
+<div class="posts">
   <h1>In which H goes to Seattle.rb</h1>
   <h2> It's a man's world </h2>
 
@@ -18,10 +18,12 @@ title: "In which H encounters Rubyists in the Wild"
   <h2>But it would be nothing, nothing without a woman or girl</h2>
 
   <p>They say that what you see is what you look for. Being in a group of all women, it’s easy to be sensitive, to magnify certain identity perceptions, and I realize that it’s important to remain very aware of the image we choose to assume. Two TED talks I found pretty interesting in regards to identity and perception are:</p>
+  <ul>
 
-  <a href="http://www.ted.com/talks/colin_stokes_how_movies_teach_manhood.html">How Movies Teach Manhood</a>
+  <li><a href="http://www.ted.com/talks/colin_stokes_how_movies_teach_manhood.html">How Movies Teach Manhood</a></li>
 
-  <a href="http://www.ted.com/talks/hetain_patel_who_am_i_think_again.html">Who am I?</a>
+  <li><a href="http://www.ted.com/talks/hetain_patel_who_am_i_think_again.html">Who am I?</a>
+  </ul></li>
 
   <h2>She's lost in the wilderness</h2>
 
