--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,15 +1,17 @@
-body {
+.index {
   background: url(/img/whiteumbrella.jpg);
-  background-size: cover; 
+  /*background-size: 100% 100%; */
+  background-position: 5% 70%;
 }
 
 .header {
   position: absolute;
   top:80px;
-  right: 300px;
+  right: 250px;
   font-variant: small-caps;
   color: black;
   font-weight: 900;
+  font-size: 25px;
 }
 
 .subheader {
@@ -18,8 +20,12 @@ body {
   line-height: .8;
   font-variant: small-caps;
   position: absolute;
-  right: 300px;
+  right: 250px;
   top: 200px;
+}
+
+body {
+  margin-top: 110px;
 }
 
 /*about styling*/
@@ -27,22 +33,28 @@ body {
   border: 0px;
   background: url(/img/rainbow.jpeg);
   background-size: cover; 
-  background-position: center right;
+  background-position: 25% 35%;
 }
 
 .about_container {
-  width: 1100px;
-  margin: 10px 50px;
+  
+  width: 1200px;
+  margin: 70px 50px;
+}
+
+.bio_box h2 {
+  font-variant: small-caps;
 }
 
 .bio_box {
   width: 530px;
   height: 450px;
-  overflow: scroll;
-  margin-top: 20px;
+  text-align: justify;
+  margin: 10px;
+  padding: 10px;
   display: inline-block;
+  float: left;
   background-color: transparent;
-  padding-left: 10px;
 }
 
 .profile {
@@ -62,12 +74,13 @@ a:link {
   display: block;
   list-style-type:none;
   font-weight: 300;
-  background-color: transparent;
-  width:900px;
+  width: 800px;
+  background: linear-gradient(to right, black, transparent);
   padding:4px;
   margin: 50px;
   position: relative;
   font-variant: small-caps;
+  /*top: 131px;*/
 }
 
 .navigation li {
@@ -98,6 +111,11 @@ a:link {
   display: block;
   padding-left: 0px;
   margin-left: 0px;
+  background-color: #6E6E6E;
+}
+
+.portfolio_menu li:hover {
+  background-color: white;
 }
 
 /*utopia styling*/
@@ -112,6 +130,7 @@ a:link {
   font-variant: small-caps;
   background-color: black;
   text-align: center;
+
 }
 
 .utopiacaption {
@@ -163,12 +182,18 @@ a:link {
 
 /*dinosaurs styling*/
 
+.dino_body {
+  /*background-color: black;*/
+}
+
 .dinosaurs {
   display: inline-block;
   margin: 10px;
+  opacity: 0.7;
 }
 
 .dinosaurs:hover {
+  opacity: 1;
   border: 1px solid blue;
 }
 
@@ -182,7 +207,7 @@ a:link {
 .posts {
   display: block;
   margin: 10px 80px;
-  padding: 10px;
+  padding: 15px;
   text-align: justify;
 }
 
@@ -209,11 +234,17 @@ a:link {
 
 .blog_heading{
   color: white;
-  background: linear-gradient(to right, black, white);
+  /*background: linear-gradient(to right, black, transparent);*/
   padding: 5px;
+  width: 700px;
   font-variant: small-caps;
   margin-left: 50px;
-  font-size: 20px;
+  font-size: 25px;
 }
 
+.post_body{
+  background-color: white;  
+  background-size: cover;
+  background-position: right bottom;
+}
 
