--- a/views/posts/week_7.erb
+++ b/views/posts/week_7.erb
@@ -2,6 +2,7 @@ date: 2013-12-15
 title: "In which H is absolved from Talking About Feelings"
 
 <div class="posts">
+  <h1>In which H is absolved from Talking About Feelings</h1>
   <p>In our first real Rails project, in which we had to create a cookbook app, we had the option of having a user sign-in feature.  The suggested gem was devise, but we ran out of time before I got it to work.  So naturally, with this week's project, I was keen on tacking user authentication again.  <a href="http://railscasts.com/episodes/270-authentication-in-rails-3-1">This</a> tutorial helped a great deal in buildling UA from scratch, though it turns out that having generated most of our models/controllers/routes using scaffold in the cookbook project was, ironically, a crutch.  </p>
 
   <p>After hacking through a first attempt at implementation, I decided to try again...and again.  I ended up writing code for user authentication in two other apps, without using scaffold or devise, and here are the main things I learned:</p>
