modify wk9 blog post

--- a/views/posts/week_9.erb
+++ b/views/posts/week_9.erb
@@ -19,19 +19,19 @@ title: "In which things heard the first time are heard for the first time"
 
   <p>As it also turns out, forgetting to do these things is not really good for you.</p>
 
-  <p>In another flash of retrospective lightning, I remembered all the talk about coding culture from week 1.  There was something about the Pomodoro timer, and burnout, and darker screen settings, and all those other little things to help codemonkeys remember to stay humans.  Back then, I probably rolled my eyes and thought that it was all just part of the introductory bafflegabbing that comes with any kind of program orientation. "Pomodoro timer," scoffed Week-One-H. "What a silly idea. As if I need some Italian tomato to tell me to turn off my computer."</p>
+  <p>In another flash of retrospective lightning, I remembered all the talk about coding culture from week 1.  There was something about the Pomodoro timer, and burnout, and darker screen settings, and all those other little things to help codemonkeys remember to stay humans.  Back then, I probably rolled my eyes and thought that it was all just part of the introductory bafflegabbing that comes with any kind of program orientation. "Pomodoro timer," scoffed Week-One-H. "What a silly idea. As if I need some tomato to tell me to turn off my computer, much less an <em>Italian</em> one."</p>
 
-  <p>Now, many, many hours of sleep deprivation and eyestrain later, I am practically desperate for something that will physically drag me away from my screen at designated times, and tell my brain to stop thinking about code for at least 5 minutes per hour. </p>
+  <p>Now, many, many hours of sleep deprivation and eyestrain later, I am practically desperate for something that will physically drag me away from my screen at designated times, and tell my brain to stop thinking about code for at least 5 minutes per hour.  I would pay money for someone to do this.  I'd write an app for it, but somehow that seems even more ironic.</p>
 
   <h1>In which a laptop sticker finally makes sense</h1>
 
-  <p>When I got into ADA, a donor generously provided me with a used laptop to use for the program.  Like any good hipster laptop, it was adorned with various stickers, including one that read "I <\3 APIs".  For the longest time, I felt like a fraud anytime I opened my computer around other programmers and displayed this sticker, because I had absolutely no clue what an API was.  More frustrasting still was, when I looked up what the acronym stood for (Application Programming Interface), I could understand each word individually, but still had no idea what it meant. 
+  <p>When I got into ADA, a donor generously provided me with a used laptop to use for the program.  Like any good hipster laptop, it was adorned with various stickers, including one that read "I &#9829; APIs".  For the longest time, I felt like a fraud anytime I opened my computer around other programmers and displayed this sticker, because I had absolutely no clue what an API was.  More frustrasting still was, when I looked up what the acronym stood for (Application Programming Interface), I could understand each word individually, but still had no idea what it meant. 
   </p>
 
   <p>Then, a friend of mine, who is also a Ruby developer, decided to give me a project to work on to help me understand what real coders do Out In The Wild.  "We need to convert the old API into a new one," he informed me.  I felt betrayed, exposed by my laptop sticker.  I decided it was time I figured out what an API meant.  
   </p>
 
-  <p>To aid in this, I decided to implement Ruby gems into my week 9 project that called on various APIs (keep in mind at this point, I still had only the mossiest of ideas about what one was).  It helped to know that a few other Adies had used the Google Book API in their personal project over Christmas break.  After a lot of chatting with computer folks and implementing four gems that accessed various APIs, I finally have a mostly un-mossified idea of what an API is, what a gem is, and how to possibly write my own.  Not bad for just over two months.
+  <p>To aid in this, I decided to implement Ruby gems into my week 9 project (raindrops-on-roses.herokuapp.com) that called on various APIs (keep in mind at this point, I still had only the mossiest of ideas about what one was).  It helped to know that a few other Adies had used the Google Book API in their personal project over Christmas break.  After a lot of chatting with computer folks and implementing four gems that accessed various APIs, I finally have a mostly un-mossified idea of what an API is, what a gem is, and how to possibly write my own.  Not bad for just over two months.
   </p>
 
 </div>
