--- a/public/css/main.css
+++ b/public/css/main.css
@@ -25,6 +25,7 @@
 }
 
 body {
+  font-family: Calibri, Candara, Segoe, "Segoe UI", Optima, Arial, sans-serif;
   margin-top: 110px;
 }
 
@@ -211,8 +212,8 @@ a:link {
   width: 800px;
   border: 1px solid black;
   background-color: white;
-  height: 400px;
-  overflow: scroll;
+  /*height: 800px;
+  overflow: scroll;*/
 }
 
 .posts_index {
@@ -255,7 +256,7 @@ a:link {
 }
 
 .post_body{
-  background: url(/img/river.jpg); 
+  background: url(/img/steps.jpg); 
   background-size: cover;
   background-position: right bottom;
 }
