--- a/public/css/main.css
+++ b/public/css/main.css
@@ -68,6 +68,10 @@ body {
 /*navigation bar styling*/
 
 a:link {
+  color: #045FB4;
+}
+
+a:visited {
   color: white;
 }
 
@@ -115,7 +119,7 @@ a:link {
 }
 
 .portfolio_menu li:hover {
-  background-color: white;
+  background-color: #151515;
 }
 
 /*utopia styling*/
@@ -226,6 +230,12 @@ a:link {
 
 .post_link {
   font-variant: small-caps;
+  padding: 3px;
+}
+
+.post_link:hover {
+  background-color: black;
+
 }
 
 .post_date {
@@ -261,3 +271,11 @@ a:link {
   background-position: right bottom;
 }
 
+.posts a {
+  color: #2E2E2E;
+}
+
+#code {
+  width: 500px;
+  margin: auto;
+}
